--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+*{
+  text-decoration: none;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav{
   display: flex;
-  flex-direction: column;
+  justify-content:space-around;
   align-items: center;
+  text-decoration: none;
+}
+Link{
+  text-decoration: none;
+}
+h3{
+color: rgb(222, 223, 226);
+}
+.ActiveOption{
+  color: rgb(252, 252, 252);
+  font-weight: bold;
+
+}
+.NavBar{
+  background-color: rgba(12, 45, 134, 0.911);
+  margin: 1rem;
+  padding: 0.5rem;
+  border-style: none;
+  text-decoration: none;
+}
+.cardCar{
+  background-color: rgb(226, 228, 231);
+  padding: 0.5rem;
+  color: rgb(0, 140, 255);
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  display: flex;
+  align-items: center;
+}
+/* botones */
+.Option{ 
+  text-decoration: none;
+  margin: 1rem;
+  font-weight: bold;
+  color: rgb(169, 186, 241);
+}
+.ItemDetailContainer{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ListGroup{
+  display: flex;
+  justify-content:center;
 }
